--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,13 +2,13 @@
 # Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 env:
-  PUBLISH_DIR: BlazorWebAssemblyXrefGenerator/bin/Release/net8.0/publish/wwwroot
+  PUBLISH_DIR: KicioroTimer/bin/Release/net8.0/publish/wwwroot
 
 on:
   # Runs on pushes targeting the default branch for the app's folder path
   push:
     paths:
-      - BlazorWebAssemblyXrefGenerator/**
+      - KicioroTimer/**
     branches:
       - main
 
@@ -46,7 +46,7 @@ jobs:
           dotnet-version: '8.0'
 
       - name: Publish app
-        run: dotnet publish BlazorWebAssemblyXrefGenerator -c Release
+        run: dotnet publish KicioroTimer -c Release
 
       - name: Rewrite base href
         uses: SteveSandersonMS/ghaction-rewrite-base-href@5b54862a8831e012d4f1a8b2660894415fdde8ec # v1.1.0
