--- a/KicioroTimer/KicioroTimer.csproj
+++ b/KicioroTimer/KicioroTimer.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.1"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.1" PrivateAssets="all"/>
+        <PackageReference Include="Tewr.BlazorWorker.BackgroundService" Version="4.1.2" />
     </ItemGroup>
 
     <ItemGroup>
